--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss": "^8.5.2",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "animate.css": "^4.1.1"
     }
 }
